--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static %}{% load sass_tags %}
 <!doctype html>
 <html lang="ru">
 <head>
@@ -10,11 +10,11 @@
 	{% block css %}
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-	
+
 	<!-- Datepicker -->
 	<link rel="stylesheet" href="{% static 'css/jquery-ui.min.css' %}">
 	<link rel="stylesheet" href="{% static 'css/datepicker.min.css' %}">
-	
+
 	<!-- Fonts -->
 	<link href="{% static 'fonts/font-awesome-4.7.0/css/font-awesome.min.css' %}" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" href="{% static 'css/flickity.min.css' %}">
 
 	<!-- My styles -->
-	<link rel="stylesheet" href="{% static 'css/style.css' %}">
+	<link rel="stylesheet" href="{% sass_src 'scss/style.scss' %}">
 	{% endblock %}
 
 	<title>{{ title }}</title>
@@ -31,7 +31,7 @@
 <body>
 	{% include 'mainapp/includes/header.html' %}
 
-	{% block content%} 
+	{% block content%}
 
 	{% endblock %}
 
