--- a/conferences/templates/conferences/includes/conference_edit.html
+++ b/conferences/templates/conferences/includes/conference_edit.html
@@ -58,87 +58,92 @@
 							<i class="fa fa-times"></i></button>
 					</div>
 				</div>
-				<div id="delete_input_{{ conference.pk }}_{{ forloop.counter0 }}" class="d-block">
+				<div id="delete_input_{{ conference.pk }}_{{ forloop.counter0 }}" class="d-none">
 					{{ form.DELETE }} {{ form.id }}
 				</div>
 				{% endfor %}
-			</div>
-		</div>
-		{% comment %} <div class="empty_question d-none">
-			{{ question_formset.empty_form }}
-								<div class="input-group-append">
-						<button data-form-number="{{ forloop.counter0 }}" class="remove_question btn btn-outline-danger"
-							type="button" title="Удалить вопрос">
-							<i class="fa fa-times"></i></button>
-					</div>
-		</div> {% endcomment %}
-		<div class="form-group row">
-			<label for="" class="sr-only">Добавить вопрос</label>
-			<div class="col-sm-6 offset-sm-4">
-				<a class="add_question btn btn-outline-secondary btn-xs" data-conference-id="{{conference.pk}}"><i
-						class="fa fa-plus mr-2"></i>Добавить
-					вопрос</a>
-			</div>
-		</div>
-	</div>
-
-	<h6 class='text-primary mb-4'>Участники конференции</h6>
-
-	<button type="button" class="btn btn-outline-danger btn-xs mb-3" data-toggle="modal"
-		data-target="#participantConfModal">Зарегистрировать</button>
-
-	<div class="table-responsive table-scroll">
-		<table class="table table-list table-internal-list">
-			<thead>
-				<tr class="active">
-					<th>ФИО</th>
-					<th>Место работы / должность</th>
-					<th>Телефон / Email</th>
-					<th>Членство РСПС</th>
-					<th>Действия</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for member in conference.members.all %}
-				<tr>
-					<td>{{member.fio}}</td>
-					<td>{{member.job}}, {{member.jobplace}}</td>
-					<td>{{member.tel}}, {{member.email}}</td>
-					<td>
-						{% if member.membership %}
-						да
-						{% else %}
-						нет
-						{% endif %}
-					</td>
-					<td>
-						<div>
-							<a href="#" class="btn-action mr-3 text-primary" title="Удалить участника"><i
-									class="fa fa-trash-o"></i></a>
-							<a href="#" class="btn-action text-primary" data-toggle="modal"
-								data-target="#participantConfModal" title="Изменить"><i class="fa fa-pencil"></i></a>
+				{% comment %} <div class="empty_question d-none">
+					<div class="question_theme input-group input-group-sm mb-3">
+						<div class="input-group-prepend">
+							<span class="input-group-text"><strong class="question_number">23</strong></span>
 						</div>
-					</td>
-				</tr>
-				{% endfor %}
-
-			</tbody>
-		</table>
-	</div>
-
-	<div class="form-group">
-		<div class="form-check">
-			<input class="form-check-input" type="checkbox" id="gridCheck{{ conference.pk }}">
-			<label class="form-check-label text-success" for="gridCheck1{{ conference.pk }}">
-				<strong>Конференция проведена</strong>
-			</label>
+						{{ question_formset.empty_form }}
+						<div class="input-group-append">
+							<button data-form-number="{{ forloop.counter0 }}"
+								class="remove_question btn btn-outline-danger" type="button" title="Удалить вопрос">
+								<i class="fa fa-times"></i></button>
+						</div>
+					</div>
+				</div> {% endcomment %}
+			</div>
 		</div>
-	</div>
-	<div>
-		<button type="submit" class="save_conference_button btn btn-primary btn-xs">Сохранить</button>
-		<a href="#multiCollapseConf{{conference.pk}}" class="btn btn-outline-primary btn-xs" data-toggle="collapse"
-			aria-expanded="false" role="button">Закрыть</a>
-		<div class="d-inline-block ml-2" id="messages_{{ conference.pk }}">
+			<div class="form-group row">
+				<label for="" class="sr-only">Добавить вопрос</label>
+				<div class="col-sm-6 offset-sm-4">
+					<a class="add_question btn btn-outline-secondary btn-xs" data-conference-id="{{conference.pk}}"><i
+							class="fa fa-plus mr-2"></i>Добавить
+						вопрос</a>
+				</div>
+			</div>
+
+		<h6 class='text-primary mb-4'>Участники конференции</h6>
+
+		<button type="button" class="btn btn-outline-danger btn-xs mb-3" data-toggle="modal"
+			data-target="#participantConfModal">Зарегистрировать</button>
+
+		<div class="table-responsive table-scroll">
+			<table class="table table-list table-internal-list">
+				<thead>
+					<tr class="active">
+						<th>ФИО</th>
+						<th>Место работы / должность</th>
+						<th>Телефон / Email</th>
+						<th>Членство РСПС</th>
+						<th>Действия</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for member in conference.members.all %}
+					<tr>
+						<td>{{member.fio}}</td>
+						<td>{{member.job}}, {{member.jobplace}}</td>
+						<td>{{member.tel}}, {{member.email}}</td>
+						<td>
+							{% if member.membership %}
+							да
+							{% else %}
+							нет
+							{% endif %}
+						</td>
+						<td>
+							<div>
+								<a href="#" class="btn-action mr-3 text-primary" title="Удалить участника"><i
+										class="fa fa-trash-o"></i></a>
+								<a href="#" class="btn-action text-primary" data-toggle="modal"
+									data-target="#participantConfModal" title="Изменить"><i
+										class="fa fa-pencil"></i></a>
+							</div>
+						</td>
+					</tr>
+					{% endfor %}
+
+				</tbody>
+			</table>
 		</div>
-	</div>
+
+		<div class="form-group">
+			<div class="form-check">
+				<input class="form-check-input" type="checkbox" id="gridCheck{{ conference.pk }}">
+				<label class="form-check-label text-success" for="gridCheck1{{ conference.pk }}">
+					<strong>Конференция проведена</strong>
+				</label>
+			</div>
+		</div>
+		<div>
+			<button type="submit" class="save_conference_button btn btn-primary btn-xs">Сохранить</button>
+			<a href="#multiCollapseConf{{conference.pk}}" class="btn btn-outline-primary btn-xs" data-toggle="collapse"
+				aria-expanded="false" role="button">Закрыть</a>
+			<div class="d-inline-block ml-2" id="messages_{{ conference.pk }}">
+			</div>
+		</div>
 </form>
