--- a/mainapp/templates/mainapp/includes/modal-participantConf.html
+++ b/mainapp/templates/mainapp/includes/modal-participantConf.html
@@ -33,6 +33,11 @@
 							<input name="fio" type="text" class="form-control form-control-sm" required>
 						</div>
 						<div class="form-group">
+							<label for="" class="form-label-sm">Город&nbsp;<span
+									class="text-danger">*</span></label>
+							<input name="city" type="text" class="form-control form-control-sm" required>
+						</div>
+						<div class="form-group">
 							<label for="" class="form-label-sm">Место работы&nbsp;<span
 									class="text-danger">*</span></label>
 							<input name="job" type="text" class="form-control form-control-sm" required>
@@ -51,12 +56,16 @@
 							<div class="form-group col-sm">
 								<label for="" class="form-label-sm">Телефон&nbsp;<span
 										class="text-danger">*</span></label>
-								<input name="phone" type="text" class="form-control form-control-sm">
+								<input name="tel" type="text" class="form-control form-control-sm">
 							</div>
 						</div>
 						<div class="form-group form-check">
 							<input name="register_as_new_member" type="checkbox" class="form-check-input" id="membRsps">
 							<label class="form-check-label" for="membRsps">Зарегистрировать как нового члена РСПС</label>
+						</div>
+						<div class="form-group form-check">
+							<input id="email_subscribtion" name="subscription" type="checkbox" class="form-check-input">
+							<label class="form-check-label" for="email_subscribtion">Добавить в E-mail рассылку</label>
 						</div>
 					</form>
 					<form id="new_participant_conference_select_existing">
@@ -113,34 +122,12 @@
 										<td>{{ member.city }}</td>
 									</tr>
 									{% endfor %}
-									{% comment %} <tr>
-										<td scope="row">
-											<div class="form-check">
-												<input type="checkbox" class="form-check-input select-one"
-													id="selectOne3">
-												<label class="form-check-label" for="selectOne3">Комбаров Валентин
-													Анатольевич</label>
-											</div>
-										</td>
-										<td>Москва</td>
-									</tr>
-									<tr>
-										<td scope="row">
-											<div class="form-check">
-												<input type="checkbox" class="form-check-input select-one"
-													id="selectOne4">
-												<label class="form-check-label" for="selectOne4">Комбаров Валентин
-													Анатольевич</label>
-											</div>
-										</td>
-										<td>Москва</td>
-									</tr> {% endcomment %}
 								</tbody>
 							</table>
 						</div>
 					</form>
+				<div id="server_messages"></div>
 				</div>
-
 
 				<div class="modal-footer">
 					<button class="save_member_registrations btn btn-primary btn-sm">Сохранить</button>
