--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -58,6 +58,8 @@
 	<!-- flickity-carousel -->
 	<script src="{% static 'js/flickity.pkgd.min.js' %}"></script>
 	<!-- My scripts -->
+	<script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
+	<script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
 	<script src="{% static 'js/script.js' %}"></script>
 	<script src={% static 'js/conferences.js'%}></script>
 
