publications to conferences

--- a/mainapp/templates/mainapp/includes/publication_add_modal.html
+++ b/mainapp/templates/mainapp/includes/publication_add_modal.html
@@ -12,6 +12,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="save_conference_publication btn btn-primary">Сохранить</button>
+        <div id="publication_server_messages"></div>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
       </div>
     </div>
