--- a/conferences/templates/conferences/conferences_list.html
+++ b/conferences/templates/conferences/conferences_list.html
@@ -30,35 +30,9 @@
 				</thead>
 				<tbody>
 					{% for conference in conferences %}
-
-					<tr id="tr_{{ conference.pk }}">
-						<td>{{ conference.date }}</td>
-						<td>{{ conference.place }}</td>
-						<td>
-							<div class="text-appercase">{{ conference.title }}</div>
-							<div>Колличество участников:&nbsp;<strong>{{ conference.members.all|length }}</strong></div>
-							<div id="conference_completed_message">
-								{% if not conference.completed %}
-								<div class="text-danger mt-2">Зарегистрируйте участников</div>
-								{% else %}
-								<div class="text-info mt-2">Конференция завершена, {% if not conference.publication %}сделайте публикацию{%else%}новость опубликована{%endif%}</div>
-									{% if conference.publication %}
-										<a href="#" data-conference-id="{{ conference.pk }}" class="edit_post_conference btn btn-outline-info btn-xs">Редактировать публикацию</a>
-									{% else %}
-										<a href="#" data-conference-id="{{ conference.pk }}" class="post_conference btn btn-outline-warning btn-xs">Сделать публикацию</a>
-									{% endif %}
-								{% endif %}
-							</div>
-						</td>
-						<td>
-							<a href="#" data-conference-id ="{{ conference.pk }}" class="remove_conference btn-action mr-3 text-primary" title="Удалить конференцию"><i
-									class="fa fa-trash-o"></i></a>
-							<a href="#multiCollapseConf{{ conference.pk }}"
-								class="conference_edit btn-action text-primary" data-toggle="collapse"
-								data-conference-id="{{ conference.pk }}" aria-expanded="false" title="Изменить"><i
-									class="fa fa-pencil"></i></a>
-						</td>
-					</tr>
+						<tr id="tr_{{ conference.pk }}">
+							{% include 'conferences/includes/conference_row.html' %}
+						</tr>
 					{% comment %} {% include 'conferences/includes/conference_edit.html' %} {% endcomment %}
 					<tr class="multi-collapse collapse edit-list" id="multiCollapseConf{{ conference.pk }}">
 						<td id="td_{{conference.pk}}" colspan="4" class="total-column">
