--- a/mainapp/templates/mainapp/includes/post_edit_form.html
+++ b/mainapp/templates/mainapp/includes/post_edit_form.html
@@ -16,4 +16,5 @@
                 class="text-danger">*</span></label>
         {{ form.text|safe }}
     </div>
+    <small class="btn btn-link btn-sm"><i class="fa fa-upload"></i>&nbsp;Загрузить фото</small>
 </form>
