--- a/mainapp/templates/mainapp/base.html
+++ b/mainapp/templates/mainapp/base.html
@@ -27,6 +27,10 @@
 	{% endblock %}
 
 	<title>{{ title }}</title>
+
+	{% comment %} <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> {% endcomment %}
+	{% comment %} <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script> {% endcomment %}
+	<script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
 </head>
 <body>
 	{% include 'mainapp/includes/header.html' %}
@@ -58,8 +62,6 @@
 	<!-- flickity-carousel -->
 	<script src="{% static 'js/flickity.pkgd.min.js' %}"></script>
 	<!-- My scripts -->
-	<script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
-	<script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
 	<script src="{% static 'js/script.js' %}"></script>
 	<script src={% static 'js/conferences.js'%}></script>
 
