--- a/conferences/templates/conferences/includes/conference_edit.html
+++ b/conferences/templates/conferences/includes/conference_edit.html
@@ -73,9 +73,11 @@
 
 		<h6 class='text-primary mb-4'>Участники конференции</h6>
 
+		{% if not conference.completed %}
 		<button data-conference-id="{{ conference.pk }}" type="button" class="register_members btn btn-outline-danger btn-xs mb-3">Зарегистрировать</button>
 		{% comment %} <button data-conference-id="{{ conference.pk }}" type="button" class="btn btn-outline-danger btn-xs mb-3" data-toggle="modal"
 			data-target="#participantConfModal">Зарегистрировать</button> {% endcomment %}
+		{% endif %}
 
 		<div class="table-responsive table-scroll">
 			<table class="table table-list table-internal-list">
@@ -128,7 +130,7 @@
 		</div>
 		<div>
 			<button type="submit" class="save_conference_button btn btn-primary btn-xs">Сохранить</button>
-			<a href="#multiCollapseConf{{conference.pk}}" class="btn btn-outline-primary btn-xs" data-toggle="collapse"
+			<a href="#multiCollapseConf{{conference.pk}}" class="close_conference_edit_form btn btn-outline-primary btn-xs" data-toggle="collapse"
 				aria-expanded="false" role="button">Закрыть</a>
 			<div class="d-inline-block ml-2" id="messages_{{ conference.pk }}">
 			</div>
