--- a/mainapp/templates/mainapp/includes/modal-participantConf.html
+++ b/mainapp/templates/mainapp/includes/modal-participantConf.html
@@ -126,11 +126,12 @@
 							</table>
 						</div>
 					</form>
-				<div id="server_messages"></div>
 				</div>
 
 				<div class="modal-footer">
+					
 					<button class="save_member_registrations btn btn-primary btn-sm">Сохранить</button>
+					<div id="server_messages" class="ml-2"></div>
 					<button type="button" class="btn btn-link btn-sm" data-dismiss="modal">Отмена</button>
 				</div>
 			</form>
