--- a/assets/scss/_modal.scss
+++ b/assets/scss/_modal.scss
@@ -5,6 +5,9 @@
     overflow-y: auto;
   }
 
-  .modal .modal-dialog {
-    width: 850px !important;
-  }
+ .modal-dialog {
+   @media (min-width: 576px) {
+     max-width: 800px;
+     margin: 1.75rem auto;
+   }
+ }
