--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -242,6 +242,6 @@ main .about-ro .table-sm tr td:first-child { text-transform: uppercase; backgrou
 
 .modal-wide .modal-body { overflow-y: auto; }
 
-.modal .modal-dialog { width: 850px !important; }
+@media (min-width: 576px) { .modal-dialog { max-width: 800px; margin: 1.75rem auto; } }
 
 /*# sourceMappingURL=style.css.map */
