uploading files working, but ther are some bugs

--- a/mainapp/templates/mainapp/includes/post_edit_form.html
+++ b/mainapp/templates/mainapp/includes/post_edit_form.html
@@ -18,6 +18,7 @@
     </div>
     {% comment %} <small class="btn btn-link btn-sm"><i class="fa fa-upload"></i>&nbsp;Загрузить фото</small> {% endcomment %}
     <div class="text-secondary">Загрузите фотографии (можно выбрать несколько файлов, удерживая <strong>"Ctrl"</strong>)</div>
+    <div class="text-secondary">Размер файла не должен превышать <strong>2Mb</strong>)</div>
     {% comment %} {{ upload_form.images }} {% endcomment %}
     {{ form.images }}
         <div id="uploaded_photos">
