add publication form to url news

--- a/mainapp/templates/mainapp/news.html
+++ b/mainapp/templates/mainapp/news.html
@@ -17,6 +17,7 @@
 		{% include 'mainapp/includes/account_menu_tabs.html' %}
 
 		<div class="card-all">
+		<a href="{% url 'new_publication' %}" class="new_publication btn btn-primary mb-2">Добавить публикацию</a>
 			<div class="row">  <!-- =========== Убран класс 'flex-wrap' за ненадобностью ========= -->
 				{% for publication in posts %}
 					{% include 'mainapp/includes/news-list-card.html' %}
@@ -46,6 +47,6 @@
                 </nav>
             </div>
 	</div>
-</main> 
+</main>
 <!-- End Content -->
 {% endblock %}
