--- a/mainapp/templates/mainapp/includes/news-list-card.html
+++ b/mainapp/templates/mainapp/includes/news-list-card.html
@@ -16,6 +16,10 @@
 			<h6 class="card-title mb-3">{{ publication.post.title }}</h6>
 			<div class="card-text">{{ publication.post.short_description }}</div>
 			<a href="{% url 'details' publication.post.pk %}" class="card-link">Подробнее<i class="fa fa-angle-right ml-2"></i></a>
+			{% if publication.post.user == request.user %}
+			<a href="#" class="card-link">Редактировать<i class="fa fa-angle-right ml-2"></i></a>
+			<a href="#" class="card-link">Удалить<i class="fa fa-times ml-2"></i></a>
+			{% endif %}
 		</div>
 	</div>
 </div>
